Fix orientation, remove map styling gap

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -133,7 +133,7 @@ h3 {
     background: #384658 url('img/sidepanel_bg.png') top left repeat-x;
 }
 #map {
-  width: 70%;
+  width: 717px;
   height: 100%;
   float:left;
 }
